--- a/index.html
+++ b/index.html
@@ -1,16 +1,41 @@
+<!DOCTYPE html>
 <html>
     <head>
-    <script src="script.js"></script>
-    <link rel="stylesheet" href="style.css">
+        <title> Simple Interest Calculator </title>
+        <script src="script.js"></script>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Simple Interest Calculator</h1>
+        <div class="maindiv">
+            <h1>Simple Interest Calculator</h1>
+            <br/>
+            <br/>
+            Amount 
+            <input type="number" id="principal">  
+            <br/>
+            <br/>
+            Rate 
+            <input type="range"  id="rate" min="1" max="20" step="0.25" value="10.25">  
+            <span id="rate_val">
+                10.25%
+            </span>
+            <br/>
+            <br/>
+            No. of Years 
+            <select id="years">                
+            </select>
+            <br/>
+            <br/>
+            <button onclick="compute()">Compute Interest</button>
+            <br/>
+            <span id="result">
 
-        Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
-        Interest : <span id="result"></span><br>
-
-        <button onclick="compute()">Compute</button>
+            </span>
+        </div>
+        <footer>
+            <br/>
+            <br/>
+            &#169; This Calculator belongs to NM
+        </footer>
     </body>
 </html>
