--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <script src="script.js"></script>
         <link rel="stylesheet" href="style.css">
     </head>
-    <body>
+    <body onload="loadSelect()">
         <div class="maindiv">
             <h1>Simple Interest Calculator</h1>
             <br/>
@@ -15,7 +15,7 @@
             <br/>
             <br/>
             Rate 
-            <input type="range"  id="rate" min="1" max="20" step="0.25" value="10.25">  
+            <input type="range" onchange="updateRate()" id="rate" min="1" max="20" step="0.25" value="10.25">  
             <span id="rate_val">
                 10.25%
             </span>
